# yeaphone

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO  build-release.sh  configure.in  yeaphone.1  yeaphone.lsm.in  yeaphone.spec.in
contrib/ringtones/: Makefile.am  gen_ringtones.pl
contrib/udev/: 99-yealink.rules  rebind-yealink.sh
src/: .gitignore  Makefile.am  lpcontrol.c  lpcontrol.h  yeaphone.c  ylcontrol.c  ylcontrol.h  yldisp.c  yldisp.h  ylsysfs.c  ylsysfs.h  ypconfig.c  ypconfig.h  ypmainloop.c  ypmainloop.h
